// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-span-wc should render with _label="Text" _badgeText="v" 1`] = `
<kol-span-wc class="kol-span-wc">
  <!---->
  <span>
    <span class="span-label">
      Text
    </span>
    <span aria-hidden="true" class="span-label" hidden=""></span>
    <kbd aria-hidden="true" class="badge-text-hint">
      v
    </kbd>
  </span>
</kol-span-wc>
`;

exports[`kol-span-wc should render with _label="Text" _hideLabel=true 1`] = `
<kol-span-wc class="hide-label kol-span-wc">
  <!---->
  <span>
    <span aria-hidden="true" class="span-label" hidden=""></span>
  </span>
</kol-span-wc>
`;

exports[`kol-span-wc should render with _label="Text" _icons="codicon codicon-home" 1`] = `
<kol-span-wc class="kol-span-wc">
  <!---->
  <span>
    <kol-icon _icons="codicon codicon-home" _label="" class="icon left"></kol-icon>
    <span class="span-label">
      Text
    </span>
    <span aria-hidden="true" class="span-label" hidden=""></span>
  </span>
</kol-span-wc>
`;

exports[`kol-span-wc should render with _label="Text" 1`] = `
<kol-span-wc class="kol-span-wc">
  <!---->
  <span>
    <span class="span-label">
      Text
    </span>
    <span aria-hidden="true" class="span-label" hidden=""></span>
  </span>
</kol-span-wc>
`;
